--- a/pilih-alamat/index.html
+++ b/pilih-alamat/index.html
@@ -29,7 +29,9 @@
 			 <textarea class="uk-textarea uk-alamat" rows="5" placeholder="Tulis Alamat Lengkapmu"></textarea>
     </div>
     <h6 class="format-alamat"> Format: Jalan, Kelurahan, Kecamatan, Kota, Kode Pos </h6>
-    <button class="uk-button uk-button-default simpan ">Checkout </button>
+    <center>
+    <button class="uk-button uk-button-default simpan ">Simpan </button>
+    </center>
 
   </body>
 </html>
