--- a/pilih-kategori/index.html
+++ b/pilih-kategori/index.html
@@ -19,28 +19,30 @@
 </head>
 
 <body>
-	<div class="bar">
-		<i class="fas fa-arrow-left"></i>
-     <span>Pilih Kategori Barang</span>
+  <div class="container">
+    <div class="bar">
+      <i class="fas fa-arrow-left"></i>
+      <span>Pilih Kategori Barang</span>
+    </div>
+    <a href="#">
+    <div class="uk-card uk-card-default uk-card-body">
+      <h4 class="title">Thrifting</h4>
+      <p>Untuk barang bekas yang bisa langsung digunakan tanpa diolah kembali.</p>
+    </div>
+    </a>
+    <a href="#">
+    <div class="uk-card uk-card-default uk-card-body">
+      <h4 class="title">Loakan</h4>
+      <p>Untuk barang bekas yang perlu diolah kembali untuk agar digunakan.</p>
+    </div>
+    </a>
+    <a href="#">    
+    <div class="uk-card uk-card-default uk-card-body">
+      <h4 class="title">Hasil Recycle</h4>
+      <p>Untuk barang-barang hasil daur ulang.</p>
+    </div>
+    </a>
   </div>
-  <a href="#">
-  <div class="uk-card uk-card-default uk-card-body">
-    <h4 class="title">Thrifting</h4>
-    <p>Untuk barang bekas yang bisa langsung digunakan tanpa diolah kembali.</p>
-  </div>
-  </a>
-  <a href="#">
-  <div class="uk-card uk-card-default uk-card-body">
-    <h4 class="title">Loakan</h4>
-    <p>Untuk barang bekas yang perlu diolah kembali untuk agar digunakan.</p>
-  </div>
-  </a>
-  <a href="#">    
-  <div class="uk-card uk-card-default uk-card-body">
-    <h4 class="title">Hasil Recycle</h4>
-    <p>Untuk barang-barang hasil daur ulang.</p>
-  </div>
-  </a>
 	<script src="script.js">
 
 	</script>
