--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -27,9 +27,10 @@
       <img class="qr-code" src="images/qr-code.png"/>
       <p style="color:#377A97; margin-top:0px;"> Scan QR Code pada aplikasi e-wallet </p> 
     </center>
+    <center>
     <button class="uk-button uk-button-default unduh-barcode ">
-      <i class="fas fa-arrow-down" style="color:white;"></i> Checkout </button>
-
+      <i class="fas fa-arrow-down" style="color:white; margin-right:10px;"></i> Download </button>
+    </center>
   </div>
 </body>
 
