--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <h4 class="uk-card-title judul">Kenali jenis limbah</br> di sekitarmu</h4>
         <p class="caption1">Biasanya, limbah dikelompokkan</br> menjadi limbah organik.</br> anorganik, dan B3....</p>
         <img src="images/home/illustrasi.png" class="ilustrasi" />
-        <button class="baca">Baca <i class="fas fa-chevron-right"></i> </button>
+        <a href="./pages/article.html">
+          <button class="baca">Baca <i class="fas fa-chevron-right"></i> </button>
+        </a>
       </div>
     </div>
     </div>
@@ -49,8 +51,11 @@
         <i class="fas fa-recycle" style="color:white; font-size: 35px;"></i>
       </button>
       <h4 class="text-categori" style="text-align:center; margin-right: 30px;">Hasil</br>Recycle</h4>
-      <button class="uk-button uk-button-default jual-barang ">
-        Jual barang di sini </button>
+      <a href="./pages/choose-category.html">
+        <button class="uk-button uk-button-default jual-barang ">
+          Jual barang di sini
+        </button>
+      </a>
     </section>
     <div class="container-bawah">
       <h3 style="font-weight:bold; " class="rekomendasi"> Rekomendasi </h3>
@@ -106,10 +111,12 @@
         <i class="fas fa-home home"></i>
         <p class="beranda">Beranda</p>
       </div>
-      <div class="menu-profil">
-        <i class="fas fa-user-alt profil1"></i>
-        <p class="profil">Profil</p>
-      </div>
+      <a href="./pages/profile-buying.html">
+        <div class="menu-profil">
+          <i class="fas fa-user-alt profil1"></i>
+          <p class="profil">Profil</p>
+        </div>
+      </a>
     </div>
   </section>
 </body>
