--- a/pages/profile-selling.html
+++ b/pages/profile-selling.html
@@ -31,9 +31,11 @@
       <button class="edit"><i class="fas fa-pencil-alt edit-icon"></i></button>
     </section> 
     <div class="container-bar">
-      <div class="jual-tab" style="color:rgb(78, 78, 78);">
-        <i class="fas fa-shopping-bag icon-bag" style="color:rgb(78, 78, 78);"></i><p class="beli" style="color:rgb(78, 78, 78);"> Beli </p>
-      </div>
+      <a href="./profile-buying.html">
+        <div class="jual-tab" style="color:rgb(78, 78, 78);">
+          <i class="fas fa-shopping-bag icon-bag" style="color:rgb(78, 78, 78);"></i><p class="beli" style="color:rgb(78, 78, 78);"> Beli </p>
+        </div>
+      </a>
       <div class="blue-shape" style="margin-left:200px; margin-top:-48px;">
         <i class="fas fa-tag icon-bag"></i><p class="beli">Jual</p>
       </div>
