--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
       <h4 class="text-categori" style="margin-left:10px;">Loakan</h4>
     </section>
     <section class="recycle">
-      <button class="kategori-belanja">
-        <i class="fas fa-recycle" style="color:white; font-size: 35px;"></i>
-      </button>
-      <h4 class="text-categori" style="text-align:center; margin-right: 30px;">Hasil</br>Recycle</h4>
+      <a href="./pages/search-product.html">
+        <button class="kategori-belanja">
+          <i class="fas fa-recycle" style="color:white; font-size: 35px;"></i>
+        </button>
+        <h4 class="text-categori" style="text-align:center; margin-right: 30px;">Hasil</br>Recycle</h4>
+      </a>
       <a href="./pages/choose-category.html">
         <button class="uk-button uk-button-default jual-barang ">
           Jual barang di sini
