--- a/pages/order-success.html
+++ b/pages/order-success.html
@@ -2,33 +2,34 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/css/uikit.min.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>repl.it</title>
+  <link href="../styles/order-success.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/css/uikit.min.css" />
 
-	<!-- UIkit JS -->
-	<script src="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/js/uikit.min.js">
+  <!-- UIkit JS -->
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.1/dist/js/uikit.min.js">
 
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/uikit@3.7.2/dist/js/uikit-icons.min.js">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.2/dist/js/uikit-icons.min.js">
 
-	</script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
-	<center>
-		<div class="container-bg">
-			<img src="../images/order-success/illustrasi.png" style="margin-top: 100px;" />
-			<h4 style="color:#377A97; font-weight:bold"> Transaksi berhasil!</h4>
-			<p> Silakan tunggu pesananmu tiba.</br>
-				Terima kasih sudah berpartisipasi</br>
-				dalam melestarikan bumi^^ </p>
-			<button class="uk-button uk-button-default beranda ">
-				Kembali ke Beranda</button>
-	</center>
+  <center>
+    <div class="container-bg">
+      <img src="../images/order-success/illustrasi.png" style="margin-top: 100px;" />
+      <h4 style="color:#377A97; font-weight:bold"> Transaksi berhasil!</h4>
+      <p> Silakan tunggu pesananmu tiba.</br>
+		Terima kasih sudah berpartisipasi</br>
+		dalam melestarikan bumi^^ </p>
+      <a href="../index.html">
+        <button class="uk-button uk-button-default beranda">Kembali ke Beranda</button>
+      </a>
+  </center>
 </body>
 
 </html>
