--- a/pages/profile-selling.html
+++ b/pages/profile-selling.html
@@ -28,7 +28,11 @@
         <p class="phone-number"> 082183121166 </p>
         <h6 class="address"> <i class="fas fa-map-marker-alt"></i> Semarang, Jawa Tengah </h6>
       </div>
-      <button class="edit"><i class="fas fa-pencil-alt edit-icon"></i></button>
+      <button class="edit">
+        <a href="./edit-profile.html">
+          <i class="fas fa-pencil-alt edit-icon"></i>
+        </a>
+      </button> 
     </section> 
     <div class="container-bar">
       <a href="./profile-buying.html">
