--- a/pages/detail-product-piggy-bank.html
+++ b/pages/detail-product-piggy-bank.html
@@ -49,7 +49,7 @@
     <div class="back">
       <div class="uk-container uk-container-small uk-container-head">
         <ul class="uk-iconnav">
-          <li><a href="#" uk-icon="icon: arrow-left"></a></li>
+          <li><a href="../index.html" uk-icon="icon: arrow-left"></a></li>
         </ul>
       </div>
     </div>
@@ -58,7 +58,7 @@
         <input type="radio" name="gambar-produk" id="img-1" checked />
         <li class="slide-container">
           <div class="slide-image lampuhias">
-            <img src="../images/piggy-bank/celengan.jpg">
+            <img id="product-image" src="../images/piggy-bank/celengan.jpg">
           </div>
         </li>
       </ul>
@@ -106,7 +106,6 @@
     const piggyBank = {
       id: 2,
       name: 'Celengan',
-      image: 'https://imgur.com/Ii7T5TX',
       price: 10000,
       qty: 0,
     }
@@ -140,6 +139,9 @@
     }
 
     function addToCart() {
+      const img = document.getElementById('product-image')
+      piggyBank.image = img.src
+
       let cart = localStorage.getItem('cart')
 
       if (!cart) {
